--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-	"homepage": "https://jorgesalgao0999.github.io/sienar",
 	"name": "sienar",
 	"version": "0.1.0",
 	"private": true,
@@ -19,6 +18,7 @@
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
+		"react-scroll": "^1.8.7",
 		"typescript": "^4.7.4",
 		"web-vitals": "^2.1.4"
 	},
@@ -26,9 +26,7 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -49,6 +47,6 @@
 		]
 	},
 	"devDependencies": {
-		"gh-pages": "^4.0.0"
+		"@types/react-scroll": "^1.8.4"
 	}
 }
