--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@types/node": "^16.11.47",
 		"@types/react": "^18.0.15",
 		"@types/react-dom": "^18.0.6",
+		"firebase": "^9.9.1",
 		"font-awesome": "^4.7.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
